--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <body>
 
-    <arcgis-map basemap="arcgis/topographic" center="-118.805, 34.027" zoom="13">
+    <arcgis-map basemap="arcgis/topographic" center="-118.805, 34.027" zoom="13" apikey="AAPTxy8BH1VEsoebNVZXo8HurPup5z2diSvJWwWAxDXrwsv3rfzmYeX2DuIypEg74TvjI0N7zS-0SxH4gXyWsDlHueH21cQ_5LBqJCWZmO0pRP9FcEzidUWNZdEYtmjqqLx0_vouQ6by3P_O32JyHuNEVOYuslwaa_5ZJ8Rjp8wuMTfd11_qGar_2XevFSjcbq9JwptJJepC8GQfbinCbj3xpbfiegKyrsAsn3ApZAW94cg.AT1_L75PeZZg">
 
         <arcgis-zoom position="top-left"></arcgis-zoom>
         
