making the index 4

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 
     <script>
         var esriConfig = {
-            apikey: "AAPTxy8BH1VEsoebNVZXo8HurPup5z2diSvJWwWAxDXrwstiRPI2KVTg4W5yl_6yzkvAFM6lsUqDx7iZdmSZfnwKqh8tgmZaNXjT66QzBiXrc0rb0T8NuWNAR0__c9qMTDvk67hztukD0ByhUaz2iaAKZ5fbMVhDY03Ym0amJ66m1U7NjyOBEKv-3ag4_mKZAaCYqqCLOuCK-kLBpn8K9SgILGYJV5JEKg3_EZ06Wi6f3C6KDVDOQlbUCKZ5yvdGRWPkfrbjDN5DhB2NiF-2TTqHc9zWRzy-_B3yNXsNwk5858SvtIZk-TqeykfSSSjzu4SdLQ53CU00wieI_nHdvTz005pULUlh-hkGW6K-BLLSlwY.AT1_WceFMroB"
-        };
-
+            apiKey: "AAPTxy8BH1VEsoebNVZXo8HurPup5z2diSvJWwWAxDXrwsuV55X_UfKNDgRlJo4efeabO6h8FifDYIgfC1TNqhCz7sU5C8y-zUnBnq6obFwdebTzArGlh6uWV9pn8jfzCFlPN0tXufmncy01c2Bc_n-KG7ksdybfTyduIX-zlmnNz2MiCJn5xzGWH1PuYEXoD3VVXY1r6_6BDjLvJj0MNMM1eWRLBCfNT-OyfBo-_nVDFNz2fZ9xoZ-W3dII2MxApPO-cQA04eXMRJUSbeSHoKIfK9i_vmW1ybYdiAR9l0rWujE3NoLJNai4GLdDUrUcUuyeby0n9DSHzd8Rzyc35c_8A6L1g-IW-Ua-y8-eHwF3QWs.AT1_WceFMroB"
+        }; 
     </script>
 
     <!-- Load Calcite components from CDN -->
@@ -34,16 +33,16 @@
     <script
       type="module"
       src="https://js.arcgis.com/map-components/4.31/arcgis-map-components.esm.js"
-      ></script>
+    ></script>
 
   </head>
 
   <body>
 
-    <arcgis-map basemap="arcgis/topographic" center="-118.805, 34.027" zoom="13" 
+    <arcgis-map basemap="arcgis/topographic" center="-118.805, 34.027" zoom="13">
             <arcgis-zoom position="top-left"></arcgis-zoom>
-        
     </arcgis-map>
+    
   </body>
 
 </html>
